order_detail 엔드포인트 연결

--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -99,6 +99,18 @@
   //         }
   //     });
   // }   
+
+  function get_detail() {
+    $.ajax({
+                type: "GET",
+                url: "/member_search",
+                data: {},
+                success: function (response) {
+                  let orders = response["orders"];
+                    console.log(orders['food_shop'])
+                }
+            })
+        }
 </script>
 
 <body>
