--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -40,6 +40,7 @@
 <script>
   $(document).ready(function () {
               hello()
+              get_detail()
           });
 
   function hello() {
@@ -119,7 +120,6 @@
         {% if user_email %}
             <p>안녕하세요, {{ user_email }}님!</p>
             <button onclick="logout()">로그아웃</button>
-            <button id="write-order" onclick="go_write()">글쓰기</button>
         </div>
         {% else %}
         <div class="rightbutton">
