--- a/templates/write.html
+++ b/templates/write.html
@@ -11,15 +11,23 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
           crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <title>먹고해 | 글쓰기페이지</title>
     <style>
+        * {
+            font-family: 'Nanum Gothic', sans-serif;
+        }
+        .wrap {
+            width: 500px;
+            margin: 20px auto 0 auto;
+        }
         .rightbutton {
-            width: 390px;
+            width: 500px;
             
             text-align: right;
         }
         .centerbutton {
-            width: 390px;
+            width: 500px;
             
             text-align: center;
         }
@@ -117,6 +125,7 @@
 </script>
 
 <body>
+  <div class="wrap">
     <div class = "rightbutton">
       {% if user_email %}
             <p>안녕하세요, {{ user_email }}님!</p>
@@ -211,7 +220,7 @@
           
         <button onclick="write_order()">입력하기</button> 
           
-    
+      </div>
     
     
     
